# readlogue

./: .gitignore  CHANGELOG.md  LICENSE  README.md  UI_STRUCTURE.md  config.example.yaml  config.yaml  pyproject.toml  streamlit_app.py
.github/workflows/: ingest.yml
apps/web/: README.md  package-lock.json  package.json
config/sources/: ai-gov-blog.yaml  aisi-blog.yaml  anthropic-engineering.yaml  anthropic-frontier-red-team.yaml  anthropic-news.yaml  anthropic-research.yaml  anu-integrated-ai-news.yaml  atse-news.yaml  bair-blog.yaml  csail-news.yaml  dta-news-ai.yaml  eu-digital-strategy-news.yaml  google-developers-blog-ai.yaml  groq-blog.yaml  huggingface-blog.yaml  huggingface-ethics.yaml  huggingface-research.yaml  industry-gov-news.yaml  meta-ai-blog.yaml  oaic-ai-blog.yaml  oecd-ai-wonk.yaml  rmit-news-technology.yaml  stanford-hai-news.yaml  unimelb-newsroom.yaml
data/: reader.db
docs/: BLOCKED_SOURCES.md  README.md  ingestion-pipeline.md  labeling-dashboard.md  technical-specifications.md
scripts/: audit_item_dates.py  sync_categories.py  sync_web_vocab.py
src/reader/: __init__.py  config.py  config_edit.py  content_clean.py  curation.py  db_backup.py  export.py  git_sync.py  ingest.py  scrapers.py  storage.py  (+2 more)
src/reader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
supabase/: README.md
tests/: test_categories_sync.py  test_config_edit.py  test_config_vocabularies.py  test_content_clean.py  test_curation.py  test_db_backup.py  test_export.py  test_scrapers.py  test_storage.py  test_supabase_sync.py  test_validation.py  test_vocab_sync.py
(+44 files in other folders)
