[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reader"
version = "0.1.0"
description = "RSS and news reader with ML-friendly storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "html2text>=2024.2",
  "playwright>=1.40",
  "requests>=2.31",
  "streamlit>=1.36",
  "PyYAML>=6.0",
  "supabase>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]